test/conformance/kuttl/generate/validation/clusterpolicy/target-namespace-scope/01-fail.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: policy-namespaced-target.yaml
  shouldFail: true
- file: policy-cluster-target.yaml
  shouldFail: true
