test/conformance/kuttl/generate/validation/clusterpolicy/target-namespace-scope/01-update-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:background-controller:manage-ns-crossplane-role
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
rules:
- apiGroups:
  - ""
  - "iam.aws.crossplane.io"
  resources:
  - namespaces
  - roles
  verbs:
  - create
  - update
  - delete
  - get
- apiGroups:
  - "kyverno.io/v2alpha1"
  resources:
  - clustercleanuppolicies
  verbs:
  - create
  - update
  - delete
  - get
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kyverno:manage-ns-crossplane-role
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kyverno:background-controller:manage-ns-crossplane-role
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
