test/conformance/kuttl/generate/validation/clusterpolicy/target-namespace-scope/02-check.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: policy-namespaced-target.yaml
  shouldFail: true
- file: policy-fail-ns-cluster-target.yaml
  shouldFail: true
- file: policy-pass.yaml
  shouldFail: false
