test/conformance/kuttl/generate/validation/clusterpolicy/target-namespace-scope/03-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: apiextensions.k8s.io/v1
  kind: CustomResourceDefinition
  name: roles.iam.aws.crossplane.io
