test/conformance/kuttl/generate/validation/clusterpolicy/target-namespace-scope/policy-fail-1-no-ns-namespaced-target.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-nosync-modify-rule-policy
spec:
  generateExisting: false
  rules:
  - name: cpol-data-nosync-modify-rule-rule
    match:
      any:
      - resources:
          kinds:
          - Namespace
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - default
          - kube-public
          - kyverno
    generate:
      synchronize: false
      apiVersion: v1
      kind: ConfigMap
      name: zk-kafka-address
      data:
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
        data:
          ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
          KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
