test/conformance/kuttl/generate/validation/clusterpolicy/target-namespace-scope/policy-pass-1-ns-namespaced-target.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: user-per-namespace-pass-2
spec:
  generateExistingOnPolicyUpdate: true
  rules:
    - generate:
        apiVersion: rbac.authorization.k8s.io/v1
        data:
          rules:
            - verbs:
                - "*"
              apiGroups:
                - "*"
              resources:
                - "*"
        kind: Role
        name: superuser
        namespace: "{{request.object.metadata.name}}"
        synchronize: true
      match:
        any:
          - resources:
              kinds:
                - Namespace
              names:
                - dev-*
      name: role-per-namespace
